tests/errors/comb-static-comp.expect
---CODE---
1
---STDERR---
Error: tests/errors/comb-static-comp.futil
3 |comb static<1> component custom_lt(left: 4, right: 4) -> (out: 1) {
  |^^^^^^^^^^^^^^ Parse error
Cannot have both comb and static annotations
